# document_intelligence_refinery

./: .env.example  .gitignore  ARCHITECTURE.md  DOMAIN_NOTES.md  Dockerfile  README.md  analysis_results_raw.json  extraction_rules.yaml  final_project_report.md  pyproject.toml  pytest.ini  refactor_flat.py  requirements.txt  rubric_qa_examples.json
.chromadb/: chroma.sqlite3
.chromadb/2f8debd4-da9b-476c-a4f1-66823c1199a0/: index_metadata.pickle
.refinery/: extraction_ledger.jsonl  facts.db  ldus_sample.json  qa_examples.json
.refinery/pageindex/: Financial_Doc_1.pdf_pageindex.json  Financial_Doc_2.pdf_pageindex.json  Financial_Doc_3.pdf_pageindex.json  Legal_Doc_1.pdf_pageindex.json  Legal_Doc_2.pdf_pageindex.json  Legal_Doc_3.pdf_pageindex.json  Operational_Doc_1.pdf_pageindex.json  Operational_Doc_2.pdf_pageindex.json  Operational_Doc_3.pdf_pageindex.json  Technical_Doc_1.pdf_pageindex.json  Technical_Doc_2.pdf_pageindex.json  Technical_Doc_3.pdf_pageindex.json  audit_report_section_1.json  audit_report_section_2.json  audit_report_section_3.json  (+9 more)
config/: extraction_rules.yaml
scripts/: ask.py  compare_extractions.py  demo_full_pipeline.py  density_analysis.py  docling_analysis.py  evaluate_retrieval.py  export_sample_ldus.py  generate_artifacts.py  generate_artifacts_mastery.py  generate_rubric_artifacts.py  run_phase2.py  test_docling_nodes.py  test_phase4_operational.py  visualize_chunks.py
src/: __init__.py  config.py  config_loader.py  main.py  persistence.py
tests/: test_detectors.py  test_models.py  test_sampling.py  test_triage.py
(+71 files in other folders)
