[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Scalable foundation for an agentic document intelligence system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Aman", email = "aman@example.com" }
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "pdfplumber>=0.10.3",
    "docling>=2.0.0",
    "langdetect>=1.0.9",
    "pypdf>=5.0.0",
    "httpx>=0.27.0",
    "pypdfium2>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0",
]

[project.scripts]
document-intelligence-refinery = "document_intelligence_refinery.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/document_intelligence_refinery"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "structlog.*"
ignore_missing_imports = true
